kubernetes/apps/flux-system/flux-operator/instance/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  parentRefs:
  - name: external-gateway-cilium
    namespace: network
    sectionName: https
  hostnames:
  - "flux-webhook.${SECRET_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hook/
    backendRefs:
    - name: webhook-receiver
      namespace: flux-system
      port: 80
